[gd_scene load_steps=12 format=3 uid="uid://b7ajk7rvap5nu"]

[ext_resource type="Script" path="res://objects/ui/pause_screen.gd" id="1_sebvj"]
[ext_resource type="PackedScene" uid="uid://dtfkpvj2rxc7k" path="res://objects/ui/menus/pause.tscn" id="2_3lppj"]
[ext_resource type="PackedScene" uid="uid://3f8sior7em7a" path="res://objects/ui/menus/settings.tscn" id="3_q4nl6"]
[ext_resource type="PackedScene" uid="uid://gwm7tm1xnl5a" path="res://objects/ui/menus/graphics.tscn" id="4_pf4q6"]
[ext_resource type="PackedScene" uid="uid://dlkta45kvdfku" path="res://objects/ui/menus/audio.tscn" id="5_6p4cl"]
[ext_resource type="PackedScene" uid="uid://cp7kakv4lupju" path="res://objects/ui/menus/controls.tscn" id="6_lnbbr"]
[ext_resource type="PackedScene" uid="uid://cxucawp22wfyt" path="res://objects/ui/prompt.tscn" id="7_vlijf"]

[sub_resource type="Animation" id="Animation_srie6"]
resource_name = "appear"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darken:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.501961)]
}

[sub_resource type="Animation" id="Animation_y1vl2"]
resource_name = "disappear"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darken:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.501961), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kd5kh"]
resource_name = "exit"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blackout:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yfdt"]
_data = {
"appear": SubResource("Animation_srie6"),
"disappear": SubResource("Animation_y1vl2"),
"exit": SubResource("Animation_kd5kh")
}

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sebvj")

[node name="Darken" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4yfdt")
}

[node name="Menus" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -832.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Pause" parent="Menus" instance=ExtResource("2_3lppj")]
visible = false
layout_mode = 2

[node name="Settings" parent="Menus" instance=ExtResource("3_q4nl6")]
visible = false
layout_mode = 2

[node name="Graphics" parent="Menus" instance=ExtResource("4_pf4q6")]
visible = false
layout_mode = 2

[node name="Audio" parent="Menus" instance=ExtResource("5_6p4cl")]
visible = false
layout_mode = 2

[node name="Controls" parent="Menus" instance=ExtResource("6_lnbbr")]
visible = false
layout_mode = 2

[node name="Prompts" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 664.0
offset_right = 384.0
offset_bottom = 704.0
theme_override_constants/separation = 16

[node name="Prompt_Select" parent="Prompts" instance=ExtResource("7_vlijf")]
visible = false
layout_mode = 2
title = "Select"
action_name = "interact"

[node name="Prompt_Back" parent="Prompts" instance=ExtResource("7_vlijf")]
visible = false
layout_mode = 2
title = "Back"
action_name = "shoot"

[node name="Blackout" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_pressed" from="Menus/Pause" to="." method="_on_pause_button_pressed"]
[connection signal="closed" from="Menus/Pause" to="." method="_on_pause_closed"]
[connection signal="button_pressed" from="Menus/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="closed" from="Menus/Settings" to="." method="_on_settings_closed"]
[connection signal="closed" from="Menus/Graphics" to="." method="_on_graphics_closed"]
[connection signal="closed" from="Menus/Audio" to="." method="_on_audio_closed"]
[connection signal="closed" from="Menus/Controls" to="." method="_on_controls_closed"]
